Fixes issue where the current date dot was too small

--- a/src/components/ScheduleWeek/ScheduleWeek.css
+++ b/src/components/ScheduleWeek/ScheduleWeek.css
@@ -98,7 +98,7 @@
   margin: 0 auto;
   border-radius: 50%;
   padding: 7.5px;
-  max-width: 20px;
+  width: 15px;
   text-align: center;
 }
 
